tweaking accordion back to row; font-awesome working; alignments correct; .3

--- a/src/_themes/espnplus/scss/_component_section.scss
+++ b/src/_themes/espnplus/scss/_component_section.scss
@@ -278,7 +278,7 @@ section.section {
   &.even:last-child:after {
     content: '';
     position: relative;
-    display: block;
+    display: none;
     bottom: 0;
     right: 0;
     left: 0;
@@ -289,7 +289,7 @@ section.section {
     background: inherit;
     transform: skewY(0deg);
     transform-origin: 100%;
-    z-index: 2;
+    z-index: -1;
   } //&.even:after >> bottom angled BG
 
 } // section.section
