--- a/src/_unmin/scss/espnplus-non-critical.css
+++ b/src/_unmin/scss/espnplus-non-critical.css
@@ -2793,6 +2793,7 @@ section.league-toc {
     border-top: 1px solid #636363; }
     section.league-toc .container .copyright {
       margin: 3.375rem 0 1.5rem 0;
+      text-align: left;
       color: #636363; }
     @media (max-width: 767px) {
       section.league-toc .container .copyright {
@@ -2801,8 +2802,6 @@ section.league-toc {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: center;
-      align-items: flex-start;
       width: 100%;
       margin: 0;
       padding: 0; }
@@ -2842,14 +2841,19 @@ section.league-toc {
               padding: 0 1.282rem;
               font-weight: 400;
               line-height: 2.563rem;
+              text-align: left;
               color: #636363; }
+              section.league-toc .container .accordion .card .card-header a h5 p {
+                margin: 0;
+                padding: 0; }
               section.league-toc .container .accordion .card .card-header a h5 i.fa {
                 position: absolute;
                 display: block;
-                top: 0px;
+                top: 0;
                 right: 1rem;
                 width: 1rem;
                 height: 1rem;
+                line-height: 2.563rem;
                 color: #636363; }
         section.league-toc .container .accordion .card .card-body {
           display: inline-block;
@@ -2857,7 +2861,11 @@ section.league-toc {
           padding: 1.282rem;
           border-top: 1px solid #636363;
           background-color: #191919;
+          text-align: left;
           color: #636363; }
+          section.league-toc .container .accordion .card .card-body p {
+            margin: 0;
+            padding: 0; }
       @media (max-width: 767px) {
         section.league-toc .container .accordion .card {
           display: block;
